Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55063

Misplaced and in some cases croped menus when using xdg_shell

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.2, 5.7.1
    • 5.6.1, 5.7.0, 5.7.1
    • QPA: Wayland
    • None

      As the title suggest. When using xdg_shell in weston (and other compositors) the menus of the apps those on the top and those in window are misplaced. Also in screen menus appear cropped.

      See attachments. First is djview showing the top menus misplacement and second is antimony showing the cropped and misplaced.

      Reopen:
      I still see problems with menus. This time menus that are not part of file edit etc open in the top left corner.

      You can test with smplayer in weston by clicking the heart icon on the menu above the main screen (with no video playing).

        1. ewayland-screenshot.png
          93 kB
          Ap B
        2. wayland-screenshot.png
          48 kB
          Ap B
        For Gerrit Dashboard: QTBUG-55063
        # Subject Branch Project Status CR V

            johanhelsing Johan Helsing
            apb Ap B
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes